--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <body>
 <p>Test paragraph.</p>
+<iframe src="https://discordapp.com/widget?id=164151069952180224&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
 </body>
 </html>
