--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
-<body>
-<h1>Welcome!</h1>
-<p>Test paragraph.</p>
-<iframe src="https://discordapp.com/widget?id=164151069952180224&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+<body style="background-color:black;">
+<h1 style="font-color:white;">Welcome!</h1>
+<p style="font-color:white;">Test paragraph.</p>
 </body>
 </html>
