--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body style="background-color:black;">
-<h1 style="font-color:white;">Welcome!</h1>
-<p style="font-color:white;">Test paragraph.</p>
+<h1 style="color:white;">Welcome!</h1>
+<p style="color:white;">Test paragraph.</p>
 </body>
 </html>
