--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <html>
 <body style="background-color:black;">
-<h1 style="color:white;">Welcome!</h1>
-<p style="color:white;">Test paragraph.</p>
+    <h1 style="color:white;">Welcome!</h1>
+
+    <navbar>
+        <ul>
+            <li>HOME</li>
+            <li>ABOUT</li>
+            <li>CONTACT</li>
+        </ul>  
+    </navbar>
+
+    <p style="color:white;">Test paragraph.</p>
 </body>
 </html>
