--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <h1 style="color:white;">Welcome!</h1>
 
     <navbar>
-        <ul>
+        <ul style="color:white;">
             <li>HOME</li>
             <li>ABOUT</li>
             <li>CONTACT</li>
