--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <body style="background-color:black;">
     <h1 style="color:white;">Welcome!</h1>
 
-    <navbar>
-        <ul style="color:white;">
+    <navbar style="color:white;">
+        <ul>
             <li>HOME</li>
             <li>ABOUT</li>
             <li>CONTACT</li>
