--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+    <title>Virtuazation</title>
+</head>
 <body style="background-color:black;">
     <h1 style="color:white;">Welcome!</h1>
 
