--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title>Virtuazation</title>
+    <base href="https://github.com/Virtuazation/website/edit/master" target="_blank">
+    <meta name="Programmer" content="Jonathan Thomason">
 </head>
 <body style="background-color:black;">
-    <h1 style="color:white;">Welcome!</h1>
-
+    
+    <header>
+        <h1 style="color:white;">Welcome to the Virtuazation Website!</h1>
+    </header>
+    
     <navbar style="color:white;">
         <ul>
             <li>HOME</li>
