some fixes and meta additions

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <title>Virtuazation</title>
     <base href="https://github.com/Virtuazation/website/edit/master" target="_blank">
+    <meta charset="UTF-8">
+    <meta name="description" content="projects of games and whatnot">
+    <meta name="keywords" content="HTML,CSS">
     <meta name="Programmer" content="Jonathan Thomason">
 </head>
 <body style="background-color:black;">
@@ -11,13 +14,13 @@
         <h1 style="color:white;">Welcome to the Virtuazation Website!</h1>
     </header>
     
-    <navbar style="color:white;">
+    <nav style="color:white;">
         <ul>
             <li>HOME</li>
             <li>ABOUT</li>
             <li>CONTACT</li>
         </ul>  
-    </navbar>
+    </nav>
 
     <p style="color:white;">Test paragraph.</p>
 </body>
