more orginizational changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
             <li>CONTACT</li>
         </ul>  
     </nav>
-
+    <section>
     <p style="color:white;">Test paragraph.</p>
+    </section>
+    <footer>
+        <!-->Put javascript here.<!-->
+    </footer>
 </body>
 </html>
