--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <p style="color:white;">Test paragraph.</p>
     </section>
     <footer>
-        <!-->Put javascript here.<!-->
+        <!--Put javascript here-->
     </footer>
 </body>
 </html>
